--- a/frontend/src/CaseManagement.css
+++ b/frontend/src/CaseManagement.css
@@ -1,99 +1,56 @@
-.case-management {
-  font-family: 'Arial', sans-serif;
-  max-width: 900px;
+/* CaseManagement.css */
+
+.case-management-container {
+  /* max-width: 800px; */
   margin: 0 auto;
   padding: 20px;
-  color: #333;
-}
-
-h1 {
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-align: center;
-  margin-bottom: 30px;
 }
 
-.search-and-buttons {
-  display: flex;
-  justify-content: space-between;
+.cases-section {
   margin-bottom: 20px;
 }
 
-.search-and-buttons input[type="text"] {
+.active-cases {
+  /* background-color: #ffffff; */
+  /* border: 1px solid #e0e0e0; */
+  border-radius: 6px;
   padding: 10px;
-  width: 60%;
-  border: 1px solid #ccc;
-  border-radius: 4px;
 }
 
-.search-and-buttons button {
-  padding: 10px 15px;
+.case-item {
+  cursor: pointer;
+  margin-bottom: 5px;
+  padding: 8px;
+  /* background-color: #f5f5f5; */
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.case-item:hover {
+  background-color: #e0e0e0;
+}
+
+.case-details {
+  /* background-color: #ffffff; */
+  border: 1px solid #e0e0e0;
+  border-radius: 6px;
+  padding: 20px;
+}
+
+.casebutton {
+  padding: 10px 20px;
+  background-color: #0a0a0a;
+  color: #ffffff;
   border: none;
-  background-color: #5cb85c;
-  color: white;
   border-radius: 4px;
   cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-.search-and-buttons button:not(:last-child) {
-  margin-right: 10px;
-}
-
-.case-list {
-  margin-top: 20px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-}
-
-.case {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 15px;
-  border-bottom: 1px solid #f5f5f5;
-}
-
-.case:last-child {
-  border-bottom: none;
-}
-
-.case p {
-  margin: 0;
-  padding: 0 10px;
-}
-
-.case p:first-child {
-  flex-grow: 1;
-}
-
-/* Additional styles for Case Details */
-.case-details {
-  padding: 15px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  margin-top: 20px;
-}
-
-.case-details label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
-}
-
-.case-details input[type="text"] {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 20px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-.case-details input[type="text"]:read-only {
-  background-color: #f5f5f5;
-}
-
-.case-details .case-detail {
-  margin-bottom: 10px;
-}
-
-.case-details .case-detail:last-child {
-  margin-bottom: 0;
+.casebutton:hover {
+  background-color: #0056b3;
 }
