--- a/frontend/src/CaseManagement.css
+++ b/frontend/src/CaseManagement.css
@@ -10,6 +10,27 @@
   text-align: center;
 }
 
+.controls {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.new-case-button {
+  padding: 10px 20px;
+  background-color: #0056b3;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.new-case-button:hover {
+  background-color: #003d82;
+}
+
+
 .cases-section {
   margin-bottom: 20px;
 }
@@ -54,3 +75,37 @@
 .casebutton:hover {
   background-color: #0056b3;
 }
+
+.case-details {
+  /* ... existing styles ... */
+  margin-top: 20px;
+}
+
+/* Adding styles for new form */
+.police-report-form {
+  border: 1px solid #e0e0e0;
+  border-radius: 6px;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.search-container {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.search-bar {
+  width: 50%; /* or any width you prefer */
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+/* Responsive adjustments for smaller screens */
+@media (max-width: 600px) {
+  .search-bar {
+    width: 70%;
+  }
+}
+
