--- a/frontend/src/CaseManagement.css
+++ b/frontend/src/CaseManagement.css
@@ -3,109 +3,33 @@
 .case-management-container {
   /* max-width: 800px; */
   margin: 0 auto;
-  padding: 20px;
+  /* padding: 20px; */
   background-color: #f9f9f9;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-align: center;
+  
 }
 
-.controls {
+.filters {
+  padding-top: 2%;
   display: flex;
-  justify-content: center;
+  align-items: center;
+  gap: 10px;
   margin-bottom: 20px;
 }
 
-.new-case-button {
-  padding: 10px 20px;
-  background-color: #0056b3;
-  color: #ffffff;
-  border: none;
+.filters label {
+  font-weight: bold;
+  font-size: small;
+}
+
+.filters select {
+  padding: 5px;
   border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.new-case-button:hover {
-  background-color: #003d82;
-}
-
-
-.cases-section {
-  margin-bottom: 20px;
-}
-
-.active-cases {
-  /* background-color: #ffffff; */
-  /* border: 1px solid #e0e0e0; */
-  border-radius: 6px;
-  padding: 10px;
-}
-
-.case-item {
-  cursor: pointer;
-  margin-bottom: 5px;
-  padding: 8px;
-  /* background-color: #f5f5f5; */
-  border-radius: 4px;
-  transition: background-color 0.3s ease;
-}
-
-.case-item:hover {
-  background-color: #e0e0e0;
-}
-
-.case-details {
-  /* background-color: #ffffff; */
-  border: 1px solid #e0e0e0;
-  border-radius: 6px;
-  padding: 20px;
-}
-
-.casebutton {
-  padding: 10px 20px;
-  background-color: #0a0a0a;
-  color: #ffffff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.casebutton:hover {
-  background-color: #0056b3;
-}
-
-.case-details {
-  /* ... existing styles ... */
-  margin-top: 20px;
-}
-
-/* Adding styles for new form */
-.police-report-form {
-  border: 1px solid #e0e0e0;
-  border-radius: 6px;
-  padding: 20px;
-  margin-top: 20px;
-}
-
-.search-container {
-  text-align: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.search-bar {
-  width: 50%; /* or any width you prefer */
-  padding: 10px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: small;
 }
 
-/* Responsive adjustments for smaller screens */
-@media (max-width: 600px) {
-  .search-bar {
-    width: 70%;
-  }
-}
 
