--- a/frontend/src/Dashboard.css
+++ b/frontend/src/Dashboard.css
@@ -93,5 +93,45 @@ body {
     align-items: center; /* Center charts horizontally */
     gap: 20px; /* Space between each chart */
   }
+
+  .button {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #00b3b3;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 12px;
+    padding: 10px;
+    width: 100px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+  }
+  
+  .button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+  
+  .button:hover span {
+    padding-right: 15px;
+  }
+  
+  .button:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
   
   
